src/src/shared/components/mainScreens/welcomeScreen.scss
@import "../../../theme";

@include themed($themes) {
  #welcome-main {
    background-image: url("../../../public/showcase-ultica.png");
    background-repeat: no-repeat;
    background-size: cover;

    &:before {
      background-color: theme-var("darker");
    }

    &:after {
      background: radial-gradient(circle at center, theme-var("darker"), rgba(theme-var("darker"), 0)) no-repeat;
      background-size: 100%;
    }

    #introduction-container {
      #tab-close-button {
        background-color: theme-var("selected");

        &:hover {
          background-color: theme-var("dark-blue")
        }
      }
    }
  }
}

#welcome-main {
  padding: 16px;
  overflow-y: auto;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-size: 40px 40px;
  position: relative;

  &:before {
    position: absolute;
    content: "";
    width: 100%;
    height: 100%;
    z-index: 0;
    opacity: 0.8;
    pointer-events: none;
  }

  &:after {
    position: absolute;
    content: "";
    width: 100%;
    height: 400px;
    top: calc(50% - 200px);
    z-index: 0;
    pointer-events: none;
  }

  #introduction-container {
    padding: 8px;
    z-index: 1;

    h1 {
      margin-top: 0;
      font-weight: 400;
    }

    p {
      margin-top: 16px;
      margin-bottom: 16px;
    }

    button {
      height: 32px;
    }

    select {
      height: 32px;
    }
  }
}

